# python_labs

./: .coverage  Makefile  README.md  make.bat  pyproject.toml
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
images/lab02/: arrays.py  tuples.py
scr/lab02/: README.md  arrays.py  matrix.py  tuples.py
scr/lab03/: README.md  text.py  text_stats.py
scr/lab04/: io_txt_csv.py  text_report.py
scr/lab05/: README.md  csv_xlsx.py  json_csv.py
scr/lab_01/: 01_name_age.py  04_minutes.py  05_initials_len.py  README_lab01.md
src/: lab01
src/Lab07.egg-info/: PKG-INFO  README.md  SOURCES.txt  requires.txt  top_level.txt
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: text.py  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py  json_csv_old.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  examples.py  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lab_01/: 01_name_age.py  02_sum_avg.py  03_discount.py  04_minutes.py  05_initials_len.py
src/lib/: text.py  texts.py
tests/: README.md  test_json_csv.py  test_texts.py
